--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cross-env": "^7.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
     "express": "^4.21.2",
     "express-ws": "^5.0.2",
     "helmet": "^8.0.0",
